<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="36dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toTopOf="@+id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_view" />

    <EditText
        android:id="@+id/txt_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="@string/txt_last_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_phone"
        app:layout_constraintStart_toStartOf="@+id/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <Button
        android:id="@+id/btn_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="69dp"
        android:text="@string/view"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_clear"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/clear"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_view"
        app:layout_constraintEnd_toStartOf="@+id/btn_view"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/txt_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="57dp"
        android:ems="10"
        android:hint="@string/txt_phone"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_view"
        app:layout_constraintStart_toStartOf="@+id/txt_last_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_last_name" />
</androidx.constraintlayout.widget.ConstraintLayout>